@@ -3,6 +3,7 @@
 
      FIXED: Crash when DSP is restarted after a long pause.
      FIXED: Remove usage of deprecated Qt APIs.
+  IMPROVED: Allow ordinary IP addresses to be used in remote control settings.
 
 
     2.15.7: Released January 23, 2022
